@@ -1,6 +1,7 @@
 4
 ===
-New past and copy funcions, improvments on selection func (pekayatt)
+Adjust in Undo/Redo functions, now we have a limit (on 10 times) (pekayatt)
+New past and copy funcions, improvements on selection func (pekayatt)
 Fixed bug with pixmap_temp
 New FILL fuction, linked to C module (pekayatt)
 Color list in Area.py is not used anymore. Toolbox.py now passes a gdk.Color (nathalia.sautchuk, alexandre)
